# async-rust-example

./: Cargo.toml  README.md
client_async/: Cargo.toml
client_async/src/: main.rs
client_synchronous/: Cargo.toml
client_synchronous/src/: main.rs
client_synchronous_parallel/: Cargo.toml
client_synchronous_parallel/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
