[package]
name = "client_async"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.20", features = ["full"] }
futures = "0.3.4"
