[package]
name = "server"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
futures-util = "0.3.5"

[dependencies.async-std]
version = "1.6.0-beta.1"
features = ["unstable", "attributes"]

